--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <title>Front End Assessment</title>
     <link rel="stylesheet" href="./styles/app.css">
 </head>
-<body>
+<body ng-controller="shopCtrl">
 <!--This div wraps the entire page-->
+
+
     <div class="site-wrapper">
         <!--Here is your header with the navigation nested inside -->
         <header class="site-header" role="banner">
             <div class="container">
               <!--Insert Logo directive here -->
+              <logo></logo>
                 <nav class="site-nav">
                     <ul class="primary-nav">
                         <!-- Navs go here -->
+                        <li><a ui-sref="home">Home</a></li>
+                        <li><a ui-sref="about">About</a></li>
+                        <li><a ui-sref="blog">Blog</a></li>
+                        <li><a ui-sref="shop">Shop</a></li>
                     </ul>
                 </nav>
                 <button class="hamburger toggle-nav js-toggle-nav" ng-click="showNav">
@@ -22,12 +29,16 @@
                     </span>
                 </button>
 
+
             </div>
         </header>
         <!--This is the main wrapper -->
         <main class="site-main" role="main">
 
         <!--Views go here -->
+        <ui-view></ui-view>
+
+
 
         </main>
         </div>
@@ -36,6 +47,11 @@
 <!--ADD ALL YOUR SCRIPTS HERE -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
-
+<script src='./app.js'></script>
+<script src='./controllers/productDetailsCtrl.js'></script>
+<script src='./controllers/shopCtrl.js'></script>
+<script src='./service/shopService.js'></script>
+<script src='./directives/logo.js'></script>
+<script src='./directives/productdirective.js'></script>
 </body>
 </html>
